--- a/.github/workflows/pester_ci.yml
+++ b/.github/workflows/pester_ci.yml
@@ -20,4 +20,4 @@ jobs:
 
       - name: Run Pester Tests
         run: |
-          Invoke-Pester -Path .\Tests -Output Detailed
+          Invoke-Pester .\Service\
